gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b19717a.d
version https://git-lfs.github.com/spec/v1
oid sha256:431771182460502358d405655354168266a6617614f6f753878995c8915a3b1a
size 509
